# gymnasia

./: .gitignore  .urmzd.sr.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  USAGE.md  flake.nix  justfile  llms.txt  sr.yaml  teasr.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
benches/: RESULTS.md  envs.rs
docs/: compliance.md  roadmap.md  usage.md
examples/: cartpole.rs  cartpole_headless.rs  mountain_car.rs
skills/gymnasia/: SKILL.md
src/: core.rs  lib.rs  render.rs
src/core/: env.rs  flatten.rs  mod.rs  render.rs  step_result.rs
src/envs/classical_control/: cartpole.rs  mountain_car.rs
src/render/: draw.rs  mod.rs  render_env.rs  renderer.rs  screen.rs
src/spaces/: bounded.rs  box_r.rs  discrete.rs  discrete_range.rs  mod.rs  multi_binary.rs  multi_discrete.rs  sample_space.rs  space.rs
src/utils/: clip.rs  mod.rs  seeding.rs  types.rs
src/utils/custom/: mod.rs  screen.rs
src/wrappers/: autoreset.rs  clip_action.rs  clip_reward.rs  flatten_observation.rs  mod.rs  normalize_observation.rs  normalize_reward.rs  order_enforcing.rs  record_episode_statistics.rs  rescale_action.rs  time_limit.rs  transform_action.rs  transform_observation.rs  transform_reward.rs
tests/: headless.rs  wrappers.rs
