[package]
name = "gymnasia"
version = "3.0.5"
authors = ["Urmzd Mukhammadnaim <hello@urmzd.com>"]
edition = "2021"
license = "Apache-2.0"
description = "OpenAI Gymnasium environments in pure Rust"
repository = "https://github.com/urmzd/gymnasia"
readme = "README.md"
keywords = ["ai", "ml", "physical", "environment", "benchmark"]
categories = ["simulation", "science", "algorithms"]
exclude = ["img/"]

[lints.rust]
unused_imports = "warn"
dead_code = "deny"

[lints.clippy]
all = "warn"

[dependencies]
rand = "0.8"
rand_pcg = "0.3"
log = "0.4.11"
macroquad = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"] }
derivative = { version = "2.2" }
ordered-float = { version = ">=3.9.1", features = ["serde", "rand"] }
num-traits = "0.2"

[features]
default = []
render = ["dep:macroquad"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "envs"
harness = false

[[example]]
name = "cartpole"
required-features = ["render"]

[[example]]
name = "mountain_car"
required-features = ["render"]
